# cfg-fuzzer

./: Cargo.toml  LICENSE  README.md  flake.nix
examples/: breakfast.cfg  c.cfg
src/: cfg.rs  cliargs.rs  generate.rs  lexer.rs  lib.rs  parser.rs
