[package]
name = "cfg-fuzzer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.59", features = ["derive"] }
rand = "0.10.0"
thiserror = "2.0.18"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
uninlined_format_args = "allow"
